welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value update is not a member of java.awt.Color
  	getCouleurSol() = Couleur
        ^SlugTracking:3: error: not found: value Couleur
  	getCouleurSol() = Couleur
                          ^SlugTracking:4: error: not found: value Couleur
	if (Couleur = Color.green) {
            ^