welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	getCouleurSol() = Couleur
	if (Couleur = Color.green) {
  	return true
 
}
	else {
  	return false
}
}

